# diorite

./: README.md  meson.build
examples/: ok-cancel.sh  simple-dialog.sh
src/: AbstractDialog.vala  Application.vala
